// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDeleteCredentialApi should attempt an api call to delete credentials: apiCall 1`] = `
[
  [
    "/api/v1/credentials/bulk_delete/",
    {
      "ids": [
        456,
        789,
      ],
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle errors while attempting to delete single and multiple credentials: deleteCredentials, error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 1,
    "name": "lorem ipsum dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "lorem ipsum, dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle success while attempting to delete single and multiple credentials: deleteCredentials, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 1,
    "name": "lorem ipsum dolor sit"
  }
])",
      "variant": "success",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 2,
    "name": "lorem ipsum, dolor sit"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API error response: callbackError 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Lorem ipsum"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Dolor sit"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Amet"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "skipped-credential",
    "name": "Lorem, Ipsum",
    "count": 2
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credentials-skipped-credentials",
    "deleted_names": "Ipsum",
    "skipped_names": "Lorem",
    "count": 1
  }
])",
      "variant": "warning",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 2,
    "name": "Lorem, Ipsum"
  }
])",
      "variant": "success",
    },
  ],
]
`;
